# TinyTensor-MLIR

./: CMakeLists.txt  README.md
docs/: architecture.md  phase0_llvm_foundation.md  roadmap.md  roadmap_v3.md
docs/archive/roadmaps/: roadmap_v1.md  roadmap_v2.md
docs/phase_0/: plan.md
docs/phase_1/: goal.md  micro_plan.md  plan.md
include/tinytensor/Frontend/: DType.h  Graph.h  Ids.h  Ops.h  Tensor.h  TensorSpec.h  TensorType.h
include/tinytensor/Support/ADT/: DenseMap.h  SmallVector.h  StringRef.h
include/tinytensor/adt/: DenseMap.h  SmallVector.h  StringRef.h
lib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/Frontend/: test_constants.cpp  test_graph.cpp  test_ops.cpp  test_types.cpp
tests/Support/ADT/: test_compiler_usecases.cpp  test_densemap.cpp  test_smallvector.cpp  test_stringref.cpp
tests/adt/: test_compiler_usecases.cpp  test_densemap.cpp  test_smallvector.cpp  test_stringref.cpp
tools/tt-emit/: CMakeLists.txt  tt-emit.cpp
tools/tt-opt/: CMakeLists.txt  tt-opt.cpp
